# task-hounds-public

./: .dockerignore  .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  build_exe.ps1  cleanup.ps1  installation.cmd  pyinstaller-server.spec  pyproject.toml  requirements.txt  start_task_hounds_safe.cmd
.github/workflows/: ci.yml
core/api/: README.md  fastapi_server.py  server.py  smoke_test.py
core/db/: schema.sql
core/db/migrations/: 009_agent_last_error.sql  010_db_skill_tables.sql  011_workspace_path.sql  012_workspace_fingerprint.sql  013_opencode_lifecycle.sql  013_project_session_chat_session.sql  014_lifecycle_tables.sql  015_agent_backend_columns.sql  017_workflow_runs_and_checkpoints.sql  018_directive_lifecycle.sql  019_worker_report_flow_columns.sql  020_v0.3_to_v0.4_capture_runtime_schema.sql  021_reviewer_sessions_error_column.sql  023_opencode_server_instances_owner_managed_status.sql  024_dedup_opencode_server_instances.sql  025_align_status_default.sql  026_agent_registry_session_scopes.sql  027_flow_checkpoints_archived_at.sql  028_workspace_name.sql  029_reviewer_issues.sql  030_todo_role_attempt_statuses.sql  031_todo_plan_archiving.sql  032_manager_chat.sql  033_execution_scoping.sql  034_project_rounds.sql  035_worker_timeout_escalation.sql  036_default_general_agents.sql  037_chat_directive_proposals.sql
core/power_teams/: __init__.py  __main__.py  cli.py  db.py
core/power_teams/agents/: __init__.py  base.py  manager.py  reviewer.py  worker.py
core/power_teams/integrations/: base_provider.py  opencode_cli_provider.py  opencode_provider.py
core/power_teams/mvp/: __init__.py  runner.py
core/power_teams/runtime/: __init__.py  backend_registry.py  opencode_connect.py  opencode_lifecycle.py  opencode_supervisor.py  result_schema.py
core/power_teams/skills/: DB_SKILL_PROMPT.md  db_tool.py
core/task_hounds_api/: README.md  __init__.py  __main__.py  contract_assets.py  desktop_runtime.py  graphflow_worker.py  supervisor.py
core/task_hounds_api/agent_prompts/: chat_prompts.md  debug_loop_contract.md  manager_prompts.md  manager_step_prompts.md  manager_v2_prompts.md  project_methodology.md  reviewer_prompts.md  system_principles.md  worker_prompts.md
core/tests/: test_db_skill.py  test_lifecycle_smoke.py  test_stability.py
docs/: what-is-power-teams.html
docs/api/: API_BALANCE_ERROR_HANDLING.md
docs/architecture/: IMPLEMENTATION_SUMMARY.md  MANAGER_AGENT_IMPROVEMENTS.md  MANAGER_WORKER_ARCHITECTURE.md  REVIEWER_AGENT_IMPLEMENTATION.md  handoff-example.md  opencode-lifecycle.md  runtime-reliability.md  system-architecture.md
docs/guides/: ECOMMERCE_TEST_GUIDE.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  QUICK_START.md  REVIEWER_AGENT_TEST_GUIDE.md  RUN_VERIFICATION_REPORT.md  getting-started.md  prompt_content_example.txt
docs/launch/: RELEASE_AND_PROMOTION.md
docs/scripts/: test-opencode-project-roots.ps1  test_opencode_project_roots.py  test_opencode_single_server_multi_dirs.py  test_subagent_fallback.py
docs/testing/: subagent-500-error-investigation.md  ui-tests.md
mobile/: README.md  capacitor.config.ts  index.html
mobile/src/: App.tsx  electron.d.ts  index.css  main.tsx  mobile.css
ui/desktop/: build_electron.ps1  main.js  package-lock.json  package.json  preload.js  splash.html
ui/mobile/: .gitignore  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
ui/web/: README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js
(+193 files in other folders)
