[project]
name = "task-hounds"
version = "1.0.0"
description = "Local multi-agent development workspace powered by OpenCode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
]
keywords = ["ai", "agents", "orchestration", "automation", "opencode", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://task-hounds.com"
Documentation = "https://github.com/catowabisabi/task-hounds#readme"
Repository = "https://github.com/catowabisabi/task-hounds.git"
Issues = "https://github.com/catowabisabi/task-hounds/issues"

[tool.setuptools.packages.find]
where = ["core"]

[project.scripts]
task-hounds-mvp = "power_teams.mvp.runner:main"
task-hounds = "power_teams.cli:main"
