[project]
name = "task-hounds"
version = "1.1.0"
description = "Local multi-agent development workspace powered by OpenCode"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "requests>=2.31",
  "langgraph>=0.2.60",
  "psutil>=5.9.0",
]
keywords = ["ai", "agents", "orchestration", "automation", "opencode", "developer-tools"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://task-hounds.com"
Documentation = "https://github.com/catowabisabi/task-hounds#readme"
Repository = "https://github.com/catowabisabi/task-hounds.git"
Issues = "https://github.com/catowabisabi/task-hounds/issues"

[tool.setuptools.packages.find]
where = ["core"]

[tool.pytest.ini_options]
testpaths = ["docs/testing/tests"]

[project.scripts]
task-hounds = "task_hounds_api.__main__:main"
task-hounds-serve = "task_hounds_api.__main__:main"
